--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# Build outputs
+target/
+build/
+out/
 dist
 dist-ssr
 *.local
+
+# JAR files
+*.jar
+*.war
+*.ear
 
 # Editor directories and files
 .vscode/*
@@ -29,39 +37,44 @@ dist-ssr
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Build files
-build/
-out/
+.env.*.local
 
 # Dependency directories
 node_modules/
 jspm_packages/
+.mvn/
 
 # Testing
 coverage/
 .nyc_output/
 
-# Production
+# Temporary files
+*.tmp
+*.temp
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Maven
+*.class
+.maven/
+
+# Gradle
+.gradle/
 build/
 
 # Misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pid
+*.seed
+*.pid.lock
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Package manager
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
