Fix database password to Mysql@8Root!2025

--- a/.env.dev
+++ b/.env.dev
@@ -6,7 +6,7 @@ DB_HOST=192.168.110.162
 DB_PORT=3306
 DB_NAME=heikeji_mall
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=Mysql@8Root!2025
 
 # Redis配置
 REDIS_HOST=localhost
