--- a/heikeji-app/src/main/resources/application.yml
+++ b/heikeji-app/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.110.162:3306/heikeji_mall?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: Mysql@8Root!2025
     hikari:
       max-lifetime: 1800000
       maximum-pool-size: 15
