--- a/heikeji-mall-service/service-order/src/main/resources/application.yml
+++ b/heikeji-mall-service/service-order/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://192.168.110.162:3306/heikeji_mall?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
-    password: root
+    password: Mysql@8Root!2025
     driver-class-name: com.mysql.cj.jdbc.Driver
   # Redis配置
   redis:
