--- a/heikeji-mall-service/service-product/src/main/resources/application.yml
+++ b/heikeji-mall-service/service-product/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.110.162:3306/heikeji_mall?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: Mysql@8Root!2025
     druid:
       initial-size: 5
       min-idle: 5
