--- a/heikeji-mall-service/service-takeout/src/main/resources/application.yml
+++ b/heikeji-mall-service/service-takeout/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://192.168.110.162:3306/heikeji_mall?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: Mysql@8Root!2025
     driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
