修复service-user模块在没有Redis时无法启动的问题

--- a/heikeji-mall-service/service-user/pom.xml
+++ b/heikeji-mall-service/service-user/pom.xml
@@ -165,6 +165,18 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.heikeji.mall.user.UserServiceApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
 
 
